// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MFileUpload completed should render completed files 1`] = `
<m-dialog title="Upload file"><span slot="trigger"></span>
    <div class="m-file-upload">
        <div class="m-file-upload__drop-zone">
            <div class="m-file-upload__drop-zone__instructions">
                <h3 class="m-file-upload__drop-zone__instructions__title">
                    <m-icon name="m-svg__arrow--down" size="32px"></m-icon> <span class="m-i18n">Drop your file here or</span></h3>
                <m-file-select skin="secondary" store-name="DEFAULT" keep-store="true" class="m-file-upload__drop-zone__instructions__button"></m-file-select>
            </div>
        </div>
        <div class="m-file-upload__completed-list">
            <ul name="m--is" tag="ul" class="m-file-upload__completed-list__wrap">
                <li>
                    <div class="m-file-upload__completed-list__content">
                        <div class="m-file-upload__completed-list__file-icon">
                            <m-icon-file extension="" size="30px"></m-icon-file>
                        </div>
                        <div class="m-file-upload__completed-list__infos">
                            <p class="m-file-upload__completed-list__infos-label">completed-file</p>
                            <p class="m-file-upload__completed-list__infos-size">1 b</p>
                        </div>
                        <div class="m-file-upload__completed-list__delete">
                            <m-icon-button title="Delete uploaded file" icon-name="m-svg__delete" button-size="32px" icon-size="20px" class="m-file-upload__completed-list__button"></m-icon-button>
                        </div>
                    </div>
                </li>
            </ul>
        </div>
    </div>
    <template>
        <div style="display:flex;">
            <m-button class="m-file-upload__footer-add">Add
                <span slot="precision">1
                    <span class="m-i18n">file</span></span>
            </m-button>
            <m-button skin="secondary" class="m-file-upload__footer-cancel"><span class="m-i18n">Cancel</span></m-button>
        </div>
    </template>
</m-dialog>
`;

exports[`MFileUpload should render correctly 1`] = `
<m-dialog title="Upload file"><span slot="trigger"></span>
    <div class="m-file-upload">
        <div class="m-file-upload__drop-zone">
            <div class="m-file-upload__drop-zone__instructions">
                <h3 class="m-file-upload__drop-zone__instructions__title">
                    <m-icon name="m-svg__arrow--down" size="32px"></m-icon> <span class="m-i18n">Drop your file here or</span></h3>
                <m-file-select skin="secondary" store-name="DEFAULT" keep-store="true" class="m-file-upload__drop-zone__instructions__button"></m-file-select>
            </div>
        </div>
    </div>
    <template>
        <div>
            <m-button disabled="disabled" class="m-file-upload__footer-add">Add
                <span slot="precision" style="display:none;">0
                    <span class="m-i18n">file</span></span>
            </m-button>
            <m-button skin="secondary" class="m-file-upload__footer-cancel"><span class="m-i18n">Cancel</span></m-button>
        </div>
    </template>
</m-dialog>
`;

exports[`MFileUpload should render correctly in mobile 1`] = `
<m-dialog title="Upload file"><span slot="trigger"></span>
    <div class="m-file-upload">
        <div class="m-file-upload__drop-zone">
            <div class="m-file-upload__drop-zone__instructions">
                <m-file-select skin="secondary" store-name="DEFAULT" keep-store="true" class="m-file-upload__drop-zone__instructions__button"></m-file-select>
            </div>
        </div>
    </div>
    <template>
        <div>
            <m-button disabled="disabled" class="m-file-upload__footer-add">Add
                <span slot="precision" style="display:none;">0
                    <span class="m-i18n">file</span></span>
            </m-button>
            <m-button skin="secondary" class="m-file-upload__footer-cancel"><span class="m-i18n">Cancel</span></m-button>
        </div>
    </template>
</m-dialog>
`;

exports[`MFileUpload uploading should render uploading files 1`] = `
<m-dialog title="Upload file"><span slot="trigger"></span>
    <div class="m-file-upload">
        <div class="m-file-upload__drop-zone">
            <div class="m-file-upload__drop-zone__instructions">
                <h3 class="m-file-upload__drop-zone__instructions__title">
                    <m-icon name="m-svg__arrow--down" size="32px"></m-icon> <span class="m-i18n">Drop your file here or</span></h3>
                <m-file-select skin="secondary" store-name="DEFAULT" keep-store="true" class="m-file-upload__drop-zone__instructions__button"></m-file-select>
            </div>
        </div>
        <h3 class="m-file-upload__title"><span class="m-i18n">Uploading</span> (1
            <span class="m-i18n">file</span>)
        </h3>
        <div class="m-file-upload__import-list">
            <ul name="m--is" tag="ul" class="m-file-upload__import-list__wrap">
                <li>
                    <div class="m-file-upload__import-list__content">
                        <div class="m-file-upload__import-list__file-icon">
                            <m-icon-file extension="" size="30px"></m-icon-file>
                        </div>
                        <div class="m-file-upload__import-list__progress-wrap">
                            <div class="m-file-upload__import-list__infos">
                                <p class="m-file-upload__import-list__name">uploading-file</p>
                                <p class="m-file-upload__import-list__size">1 b</p>
                            </div>
                            <m-progress value="33" state="in-progress"></m-progress>
                        </div>
                        <div class="m-file-upload__import-list__delete">
                            <m-icon-button title="Cancel upload" icon-name="m-svg__close-clear" button-size="32px" icon-size="12px" class="m-file-upload__import-list__button"></m-icon-button>
                        </div>
                    </div>
                </li>
            </ul>
        </div>
    </div>
    <template>
        <div>
            <m-button disabled="disabled" class="m-file-upload__footer-add">Add
                <span slot="precision" style="display:none;">0
                    <span class="m-i18n">file</span></span>
            </m-button>
            <m-button skin="secondary" class="m-file-upload__footer-cancel"><span class="m-i18n">Cancel</span></m-button>
        </div>
    </template>
</m-dialog>
`;

exports[`MFileUpload validation should render accepted file extensions 1`] = `
<m-dialog title="Upload files"><span slot="trigger"></span>
    <div class="m-file-upload">
        <div class="m-file-upload__drop-zone">
            <div class="m-file-upload__drop-zone__instructions">
                <h3 class="m-file-upload__drop-zone__instructions__title">
                    <m-icon name="m-svg__arrow--down" size="32px"></m-icon> <span class="m-i18n">Drop your files here or</span></h3>
                <m-file-select skin="secondary" multiple="multiple" store-name="DEFAULT" keep-store="true" class="m-file-upload__drop-zone__instructions__button"></m-file-select>
            </div>
            <p class="m-file-upload__drop-zone__format"><span class="m-i18n m-file-upload__drop-zone__format__label">Accepted formats</span>: jpg, png, mp4</p>
        </div>
    </div>
    <template>
        <div>
            <m-button disabled="disabled" class="m-file-upload__footer-add">Add
                <span slot="precision" style="display:none;">0
                    <span class="m-i18n">file</span></span>
            </m-button>
            <m-button skin="secondary" class="m-file-upload__footer-cancel"><span class="m-i18n">Cancel</span></m-button>
        </div>
    </template>
</m-dialog>
`;

exports[`MFileUpload validation validation messages should render rejected files in modal 1`] = `
<m-dialog title="Upload files"><span slot="trigger"></span>
    <div class="m-file-upload">
        <div class="m-message m-file-upload__error-message m--is-state-error m--is-skin-default">
            <div class="m-message__wrap">
                <div class="m-message__icon">
                    <svg aria-hidden="true" width="1em" height="1em" class="m-icon">
                        <use aria-hidden="true"></use>
                    </svg>
                </div>
                <div class="m-message__body m--has-close-button">
                    <div class="m-message__text">
                        <p class="m-file-upload__error-message__title"><span class="m-i18n">The following files can not be added.</span></p>
                        <ul class="m-file-upload__error-message__list">
                            <li>
                                <p class="m-file-upload__error-message__file-name">invalid-extensions</p>
                                <p class="m-file-upload__error-message__error"><span class="m-i18n">The file extension is not accepted.</span></p>
                            </li>
                            <li>
                                <p class="m-file-upload__error-message__file-name">invalid-size.jpg</p>
                                <p class="m-file-upload__error-message__error"><span class="m-i18n">File is denied because its size exceeds the allowable limit</span> (1 Kb).
                                </p>
                            </li>
                            <li>
                                <p class="m-file-upload__error-message__file-name">max-files.jpg</p>
                                <p class="m-file-upload__error-message__error"><span class="m-i18n">The maximum number of files that can be added simultaneously is reached</span> (5
                                    <span class="m-i18n">files</span>)
                                </p>
                            </li>
                        </ul>
                    </div>
                </div>
                <button type="button" class="m-icon-button m-message__body__close-button m--is-skin-light m--has-ripple" style="width:44px;height:44px;font-size:10px;">
                    <svg aria-hidden="true" width="1em" height="1em" class="m-icon m-icon-button__icon">
                        <use aria-hidden="true"></use>
                    </svg> <span class="m-icon-button__hidden">
            m-message:close
        </span></button>
            </div>
        </div>
        <div class="m-file-upload__drop-zone">
            <div class="m-file-upload__drop-zone__instructions">
                <h3 class="m-file-upload__drop-zone__instructions__title">
                    <svg aria-hidden="true" width="32px" height="32px" class="m-icon">
                        <use aria-hidden="true"></use>
                    </svg> <span class="m-i18n">Drop your files here or</span></h3>
                <m-file-select skin="secondary" multiple="multiple" store-name="DEFAULT" keep-store="true" class="m-file-upload__drop-zone__instructions__button"></m-file-select>
            </div>
            <p class="m-file-upload__drop-zone__format"><span class="m-i18n m-file-upload__drop-zone__format__label">Accepted formats</span>: jpg, png, mp4</p>
        </div>
    </div>
    <template>
        <div>
            <m-button disabled="disabled" class="m-file-upload__footer-add">Add
                <span slot="precision" style="display:none;">0
                    <span class="m-i18n">file</span></span>
            </m-button>
            <m-button skin="secondary" class="m-file-upload__footer-cancel"><span class="m-i18n">Cancel</span></m-button>
        </div>
    </template>
</m-dialog>
`;
